Add bibliography and external links

--- a/wikipedia-page/index.html
+++ b/wikipedia-page/index.html
@@ -735,8 +735,53 @@
                         </ol>
                     </div>
 
-                    <h3 id="bibliografia" class="subsubsection">Bibliografía (<em>en inglés</em>)</h3>
+                    <h3 id="bibliografia" class="subsubsection" style="margin-top: 20px; margin-bottom: 0px">Bibliografía (<em>en inglés</em>)</h3>
+                    
+                    <ul style="font-size: 14px; line-height: 1.4; padding-left: 26px; margin-top: 5px;">
+                        <li>Anne Frank Fonds (2003). <a href="http://www.annefrank.ch/content/page-1.asp?PortLink=209&UnLnk=40&ConType=1&Lev=2&amp;PortalId=99&RecordId=87">Informe Anual de 2003</a> (enlace roto disponible en Internet Archive; véase el historial, la primera versión y la última).. Tomado el 9 de febrero de 2005.</li>
+                        <li>Barnouw, David & van der Stroom, Gerrold (2003). <a href="https://web.archive.org/web/20071031122514/http://www.niod.nl/annefrank/Who%20betrayed%20Anne%20Frank.pdf">Who betrayed Anne Frank?</a> Instituto de los Países Bajos para la Documentación de la Guerra. Tomado el 8 de febrero de 2005.</li>
+                        <li>Clinton, Hillary Rodham (14 de abril de 1994). "<a href="https://web.archive.org/web/20110507030130/http://clinton4.nara.gov/WH/EOP/First_Lady/other/1994-04-14-first-lady-remarks-elie-wiesel-humanitarian-awards.html">Comentarios por la Primera Dama, Elie Wiesel Humanitarian Awards, Nueva York</a>. Discurso. Tomado el 30 de enero de 2005.</li>
+                        <li>Edward, Silvia (sin fecha). "<a href="https://web.archive.org/web/20050408172138/http://www.edwardsly.com/franka.htm">Anne Frank (Annelies Marie Frank)</a>". Tomado el 30 de enero de 2005</li>
+                        <li>Frank, Anne; Massotty, Susan (traducción); Frank, Otto H. & Pressler, Mirjam (editores) (1995). The Diary of a Young Girl - The Definitive Edition. <a href="https://es.wikipedia.org/wiki/Doubleday">Doubleday</a>. <a href="https://es.wikipedia.org/wiki/Especial:FuentesDeLibros/0553296981">ISBN 0-553-29698-1</a></li>
+                        <li>Lee, Carol Ann (2000). The Biography of Anne Frank - Roses from the Earth. Viking. <a href="https://es.wikipedia.org/wiki/Especial:FuentesDeLibros/0708991742">ISBN 0-7089-9174-2</a>.</li>
+                        <li>Michaelsen, Jacob B. (1997). "<a href="https://web.archive.org/web/20050310053935/http://www.findarticles.com/p/articles/mi_m0411/is_n2_v46/ai_19680329">Remembering Anne Frank</a>". findarticle.com. Tomado el 30 de enero de 2005.</li>
+                        <li>Müller, Melissa; Kimber, Rita & Kimber, Robert (traductores); Con un comentario de Miep Gies (2000). Anne Frank - The Biography. Metropolitan books. <a href="https://es.wikipedia.org/wiki/Especial:FuentesDeLibros/0747545235">ISBN 0-7475-4523-5</a>.</li>
+                        <li>Mandela, Nelson (15 de agosto de 1994). <a href="https://web.archive.org/web/20091011221136/http://www.anc.org.za/ancdocs/history/mandela/1994/sp940815.html">Discurso dirigido por el presidente Nelson Mandela en la inauguración de la exposición sobre Anne Frank en el Museo de África</a>.</li>
+                        <li>van der Rol, Ruud; Verhoeven, Rian (para la Casa de Ana Frank); Quindlen, Anna (Introducción); Langham, Tony & Peters, Plym (traducción) (1995). Anne Frank - Beyond the Diary - A Photographic Remembrance. Puffin. <a href="https://es.wikipedia.org/wiki/Especial:FuentesDeLibros/0140369260">ISBN 0-14-036926-0</a>.</li>
+                        <li>Romein, Jan (3 de abril de 1946). <a href="http://www.annefrank.org/content.asp?pid=112&lid=2">Facsímil del periódico Het Parool, primer artículo publicado sobre el diario</a>. Tomado el 30 de enero de 2005.</li>
+                        <li>Tanja, Jaap (para la Casa de Ana Frank) (2007). "<a href="http://www.annefrank.org/content.asp?PID=790&LID=2">Ten questions on the authenticity of the diary of Anne Frank</a>".</li>
+                    </ul>
 
+                    <h3 id="bibliografia" class="subsubsection">Bibliografía adicional</h3>
+
+                    <ul style="font-size: 14px; line-height: 1.4;padding-left: 26px; margin-top: 5px;">
+                        <li>Ana Frank, Diario; traducida del original neerlandés por Diego Puls, Plaza & Janés Editores, S.A., encuadernación en cartoné, 304 páginas, <a href="https://es.wikipedia.org/wiki/Especial:FuentesDeLibros/8401351987">ISBN 84-01-35198-7</a></li>
+                        <li>Anne Frank, The Diary of a Young Girl: Definitive Edition; edición en inglés, Penguin, encuadernación rústica, 338 páginas, <a href="https://es.wikipedia.org/wiki/Especial:FuentesDeLibros/014118275X">ISBN 0-14-118275-X</a></li>
+                        <li>El Diario de Ana Frank. Nuevas Ediciones de Bolsillo, encuadernación rústica (bolsillo), 384 páginas, <a href="https://es.wikipedia.org/wiki/Especial:FuentesDeLibros/8497593065">ISBN 84-9759-306-5</a></li>
+                        <li>La joven Ana Frank. Biografía escrita por Melissa Muller. Editorial Galaxia Gutenberg, encuadernación empastada, 415 páginas, <a href="https://es.wikipedia.org/wiki/Especial:FuentesDeLibros/8481093327">ISBN 84-8109-332-7</a></li>
+                        <li>Ana Frank, la biografía. Escrita por Carol Ann Lee. Plaza & Janés Editores, encuadernación rústica. 1999. <a href="https://es.wikipedia.org/wiki/Especial:FuentesDeLibros/8401012392">ISBN 84-01-01239-2</a></li>
+                        <li>Ana Frank, Diario. (Séptima edición; edición de bolsillo). Julio de 2009. <a href="https://es.wikipedia.org/wiki/Especial:FuentesDeLibros/9788497593069">ISBN 978-84-9759-306-9</a></li>
+                        <li>Anne Frank, Querida Kitty, Novela epistolar redactada por ella misma, traducida del original neerlandés por Diego Puls, Editorial EUDEBA, Buenos Aires, 2019. <a href="https://es.wikipedia.org/wiki/Especial:FuentesDeLibros/9789502329598">ISBN 9789502329598</a></li>
+                    </ul>
+
+                    <h2 class="subsection">Enlaces externos</h2>
+
+                    <ul style="font-size: 14px; line-height: 1.4;padding-left: 26px; margin-top: 5px;">
+                        <li> <a href="https://es.wikipedia.org/wiki/Wikimedia_Commons">Wikimedia Commons</a> alberga una galería multimedia sobre <a href="https://commons.wikimedia.org/wiki/Anne_Frank"><b>Ana Frank</b></a>.</li>
+                        <li><a href="https://es.wikipedia.org/wiki/Wikiquote">Wikiquote</a> alberga frases célebres de o sobre <a href="https://commons.wikimedia.org/wiki/Anne_Frank"><b>Ana Frank</b></a>.</li>
+                        <li><a href="https://www.youtube.com/watch?v=kEXuviihrrs">Única secuencia fílmica de Ana Frank</a> en <a href="https://es.wikipedia.org/wiki/YouTube">YouTube</a>.</li>
+                        <li><a href="http://www.annefrank.org/es/">La Casa de Ana Frank, Ámsterdam</a></li>
+                        <li><a href="http://www.annefrank.ch/">Fondo Ana Frank, Basilea (Suiza)</a> (en alemán)</li>
+                        <li><a href="http://www.annefrank.com/">Centro Ana Frank, Estados Unidos</a> (en inglés)</li>
+                        <li><a href="http://www.annefrank.de/">Anne Frank Zentrum, Berlín (Alemania)</a> (en alemán)</li>
+                        <li><a href="http://www.annefrank.org.uk/">Trust Anne Frank, Londres (Reino Unido)</a> (en inglés)</li>
+                        <li><a href="http://www.centroanafrank.com.ar/">Centro Ana Frank, Buenos Aires (Argentina)</a></li>
+                        <li><a href="http://www.annefrank.at/">Asociación Ana Frank, Viena (Austria)</a> (en alemán)</li>
+                        <li><a href="http://www.holocaustchronicle.org/">Crónica del Holocausto</a></li>
+                        <li><a href="https://www.imdb.com/name/nm0290833/">Ana Frank</a> en <a href="https://es.wikipedia.org/wiki/Internet_Movie_Database">Internet Movie Database</a> (en inglés).</li>
+                        <li><a href="http://www.memoriales.net/">Topografía de la memoria. Memoriales históricos de los campos de concentración nacionalsocialistas, 1933-1945</a></li>
+                        <li><a href="https://web.archive.org/web/20080124042808/http://www.ushmm.org/museum/exhibit/online/af/htmlsite/">Exposición "Unfinished Story" en el Museo Conmemorativo del Holocausto de Estados Unidos</a> (en inglés)</li>
+                    </ul>
                 </div>
             </div>
         </div>
