Add links to the index

--- a/wikipedia-page/index.html
+++ b/wikipedia-page/index.html
@@ -118,8 +118,8 @@
                             <li > <span class="enumeracion">7</span> <a href="#referencias">Referencias</a></li>
                                 <li class="nivel2"><span class="enumeracion">7.1</span> <a href="#citas">Citas</a> </li>
                                 <li class="nivel2"><span class="enumeracion">7.2</span> <a href="#bibliografia">Bibliografía (<em>en inglés</em>)</a></li>
-                                <li class="nivel2"><span class="enumeracion">7.3</span> Bibliografía adicional </li>
-                            <li > <span class="enumeracion">8</span> Enlaces Externos</li>
+                                <li class="nivel2"><span class="enumeracion">7.3</span> <a href="#adicional">Bibliografía adicional</a> </li>
+                            <li > <span class="enumeracion">8</span> <a href="#externos">Enlaces Externos</a></li>
                         </ul>
                     </div>
 
@@ -752,7 +752,7 @@
                         <li>Tanja, Jaap (para la Casa de Ana Frank) (2007). "<a href="http://www.annefrank.org/content.asp?PID=790&LID=2">Ten questions on the authenticity of the diary of Anne Frank</a>".</li>
                     </ul>
 
-                    <h3 id="bibliografia" class="subsubsection">Bibliografía adicional</h3>
+                    <h3 id="adicional" class="subsubsection">Bibliografía adicional</h3>
 
                     <ul style="font-size: 14px; line-height: 1.4;padding-left: 26px; margin-top: 5px;">
                         <li>Ana Frank, Diario; traducida del original neerlandés por Diego Puls, Plaza & Janés Editores, S.A., encuadernación en cartoné, 304 páginas, <a href="https://es.wikipedia.org/wiki/Especial:FuentesDeLibros/8401351987">ISBN 84-01-35198-7</a></li>
@@ -764,7 +764,7 @@
                         <li>Anne Frank, Querida Kitty, Novela epistolar redactada por ella misma, traducida del original neerlandés por Diego Puls, Editorial EUDEBA, Buenos Aires, 2019. <a href="https://es.wikipedia.org/wiki/Especial:FuentesDeLibros/9789502329598">ISBN 9789502329598</a></li>
                     </ul>
 
-                    <h2 class="subsection">Enlaces externos</h2>
+                    <h2 id="externos" class="subsection">Enlaces externos</h2>
 
                     <ul style="font-size: 14px; line-height: 1.4;padding-left: 26px; margin-top: 5px;">
                         <li> <a href="https://es.wikipedia.org/wiki/Wikimedia_Commons">Wikimedia Commons</a> alberga una galería multimedia sobre <a href="https://commons.wikimedia.org/wiki/Anne_Frank"><b>Ana Frank</b></a>.</li>
