Add missing links

--- a/wikipedia-page/index.html
+++ b/wikipedia-page/index.html
@@ -544,28 +544,28 @@
 
                     <h3 id="relacionados" class="subsubsection">Relacionados con el Holocausto y la Segunda Guerra Mundial</h3>
 
-                    <ul style="list-style: initial;" class="descripcion">
-                        <li id="item"> <em> Recordando a Ana Frank </em> — una película documental realizada en 1995 sobre la vida de Ana Frank.</li>
-                        <li id="item"> Campo de concentración de Auschwitz </li>
-                        <li id="item"> Campo de concentración de Bergen-Belsen </li>
-                        <li id="item"> Miep Gies </li>
-                        <li id="item"> Karl Silberbauer (suboficial de las SS, quien detuvo a Anne Frank y su familia)</li>
-                        <li id="item"> Corrie ten Boom (superviviente)</li>
-                        <li id="item"> Etty Hillesum — una mujer judía que también escribió un diario durante la guerra.</li>
-                        <li id="item"> Rutka Laskier</li>
-                        <li id="item"> Hanneli Goslar (superviviente)</li>
-                        <li id="item"> Susanne Ledermann</li>
-                        <li id="item"> Holocausto </li>
-                        <li id="item"> Tanya Savicheva — una niña rusa que registró el asesinato de su familia durante un período de seis meses durante el Sitio a Leningrado.</li>
+                    <ul style="list-style: initial; line-height: 1.3;" class="descripcion">
+                        <li id="item"> <a href="https://es.wikipedia.org/wiki/Recordando_a_Ana_Frank"><em> Recordando a Ana Frank </em></a> — una película documental realizada en 1995 sobre la vida de Ana Frank.</li>
+                        <li id="item"> <a href="https://es.wikipedia.org/wiki/Campo_de_concentraci%C3%B3n_de_Auschwitz">Campo de concentración de Auschwitz</a> </li>
+                        <li id="item"> <a href="https://es.wikipedia.org/wiki/Campo_de_concentraci%C3%B3n_de_Bergen-Belsen">Campo de concentración de Bergen-Belsen</a> </li>
+                        <li id="item"> <a href="https://es.wikipedia.org/wiki/Miep_Gies">Miep Gies</a> </li>
+                        <li id="item"> <a href="https://es.wikipedia.org/wiki/Karl_Silberbauer">Karl Silberbauer</a> (suboficial de las <a href="https://es.wikipedia.org/wiki/SS">SS</a>, quien detuvo a Anne Frank y su familia)</li>
+                        <li id="item"> <a href="https://es.wikipedia.org/wiki/Corrie_ten_Boom">Corrie ten Boom</a> (<a href="https://es.wikipedia.org/wiki/Superviviente">superviviente</a>)</li>
+                        <li id="item"> <a href="https://es.wikipedia.org/wiki/Etty_Hillesum">Etty Hillesum</a> — una mujer judía que también escribió un diario durante la guerra.</li>
+                        <li id="item"> <a href="https://es.wikipedia.org/wiki/Rutka_Laskier">Rutka Laskier</a></li>
+                        <li id="item"> <a href="https://es.wikipedia.org/wiki/Hanneli_Goslar">Hanneli Goslar</a> (superviviente)</li>
+                        <li id="item"> <a href="https://es.wikipedia.org/wiki/Susanne_Ledermann">Susanne Ledermann</a></li>
+                        <li id="item"> <a href="https://es.wikipedia.org/wiki/Holocausto">Holocausto</a> </li>
+                        <li id="item"> <a href="https://es.wikipedia.org/wiki/Tatiana_S%C3%A1vicheva">Tanya Savicheva</a> — una niña rusa que registró el asesinato de su familia durante un período de seis meses durante el <a href="https://es.wikipedia.org/wiki/Sitio_a_Leningrado">Sitio a Leningrado</a>.</li>
                     </ul>
 
                     <h3 id="otros" class="subsubsection">Otros</h3>
 
                     <ul style="list-style: initial;" class="descripcion">
-                        <li id="item">En 1992 el artista alemán Wolf Vostell creó un cuadro con el título Homenaje a Ana Frank.<a href="#cite-29"><sup href="cite-29-up">29</sup></a></li>
-                        <li id="item">5535 Annefrank — un asteroide nombrado así en su recuerdo.</li>
-                        <li id="item">Neutral Milk Hotel — banda de folk estadounidense cuyo álbum publicado en 1998, In the Aeroplane Over the Sea, se inspiró en la historia de Ana Frank.</li>
-                        <li id="item">El árbol de Ana Frank, árbol que describe en su diario.</li>
+                        <li id="item">En 1992 el artista alemán <a href="https://es.wikipedia.org/wiki/Wolf_Vostell">Wolf Vostell</a> creó un cuadro con el título Homenaje a Ana Frank.<a href="#cite-29"><sup href="cite-29-up">29</sup></a></li>
+                        <li id="item"><a href="https://es.wikipedia.org/wiki/5535_Annefrank">5535 Annefrank</a> — un asteroide nombrado así en su recuerdo.</li>
+                        <li id="item"><a href="https://es.wikipedia.org/wiki/Neutral_Milk_Hotel">Neutral Milk Hotel</a> — banda de folk estadounidense cuyo álbum publicado en 1998, In the Aeroplane Over the Sea, se inspiró en la historia de Ana Frank.</li>
+                        <li id="item"><a href="https://es.wikipedia.org/wiki/El_%C3%A1rbol_de_Ana_Frank">El árbol de Ana Frank</a>, árbol que describe en su diario.</li>
                     </ul>
 
                     <h2 id="notas" class="subsection">Notas</h2>
@@ -771,16 +771,16 @@
                         <li><a href="https://es.wikipedia.org/wiki/Wikiquote">Wikiquote</a> alberga frases célebres de o sobre <a href="https://commons.wikimedia.org/wiki/Anne_Frank"><b>Ana Frank</b></a>.</li>
                         <li><a href="https://www.youtube.com/watch?v=kEXuviihrrs">Única secuencia fílmica de Ana Frank</a> en <a href="https://es.wikipedia.org/wiki/YouTube">YouTube</a>.</li>
                         <li><a href="http://www.annefrank.org/es/">La Casa de Ana Frank, Ámsterdam</a></li>
-                        <li><a href="http://www.annefrank.ch/">Fondo Ana Frank, Basilea (Suiza)</a> (en alemán)</li>
-                        <li><a href="http://www.annefrank.com/">Centro Ana Frank, Estados Unidos</a> (en inglés)</li>
-                        <li><a href="http://www.annefrank.de/">Anne Frank Zentrum, Berlín (Alemania)</a> (en alemán)</li>
-                        <li><a href="http://www.annefrank.org.uk/">Trust Anne Frank, Londres (Reino Unido)</a> (en inglés)</li>
+                        <li><a href="http://www.annefrank.ch/">Fondo Ana Frank, Basilea (Suiza)</a> <span style="color:#555;">(en alemán)</span></li>
+                        <li><a href="http://www.annefrank.com/">Centro Ana Frank, Estados Unidos</a> <span style="color:#555;">(en inglés)</span></li>
+                        <li><a href="http://www.annefrank.de/">Anne Frank Zentrum, Berlín (Alemania)</a> <span style="color:#555;">(en alemán)</span></li>
+                        <li><a href="http://www.annefrank.org.uk/">Trust Anne Frank, Londres (Reino Unido)</a> <span style="color:#555;">(en inglés)</span></li>
                         <li><a href="http://www.centroanafrank.com.ar/">Centro Ana Frank, Buenos Aires (Argentina)</a></li>
-                        <li><a href="http://www.annefrank.at/">Asociación Ana Frank, Viena (Austria)</a> (en alemán)</li>
+                        <li><a href="http://www.annefrank.at/">Asociación Ana Frank, Viena (Austria)</a> <span style="color:#555;">(en alemán)</span></li>
                         <li><a href="http://www.holocaustchronicle.org/">Crónica del Holocausto</a></li>
-                        <li><a href="https://www.imdb.com/name/nm0290833/">Ana Frank</a> en <a href="https://es.wikipedia.org/wiki/Internet_Movie_Database">Internet Movie Database</a> (en inglés).</li>
+                        <li><a href="https://www.imdb.com/name/nm0290833/">Ana Frank</a> en <a href="https://es.wikipedia.org/wiki/Internet_Movie_Database">Internet Movie Database</a> <span style="color:#555;">(en inglés)</span>.</li>
                         <li><a href="http://www.memoriales.net/">Topografía de la memoria. Memoriales históricos de los campos de concentración nacionalsocialistas, 1933-1945</a></li>
-                        <li><a href="https://web.archive.org/web/20080124042808/http://www.ushmm.org/museum/exhibit/online/af/htmlsite/">Exposición "Unfinished Story" en el Museo Conmemorativo del Holocausto de Estados Unidos</a> (en inglés)</li>
+                        <li><a href="https://web.archive.org/web/20080124042808/http://www.ushmm.org/museum/exhibit/online/af/htmlsite/">Exposición "Unfinished Story" en el Museo Conmemorativo del Holocausto de Estados Unidos</a> <span style="color:#555;">(en inglés)</span></li>
                     </ul>
                 </div>
             </div>
