Add authority control

--- a/wikipedia-page/index.html
+++ b/wikipedia-page/index.html
@@ -782,6 +782,46 @@
                         <li><a href="http://www.memoriales.net/">Topografía de la memoria. Memoriales históricos de los campos de concentración nacionalsocialistas, 1933-1945</a></li>
                         <li><a href="https://web.archive.org/web/20080124042808/http://www.ushmm.org/museum/exhibit/online/af/htmlsite/">Exposición "Unfinished Story" en el Museo Conmemorativo del Holocausto de Estados Unidos</a> <span style="color:#555;">(en inglés)</span></li>
                     </ul>
+
+                    <table id="autoridades">
+                        <tr>
+                            <td id="head"><b><a href="https://es.wikipedia.org/wiki/Control_de_autoridades">Control de autoridades</a></b></td>
+                            <td style="padding-left: 4px;">
+                                <b>Proyectos Wikimedia</b> <span><b>&#183</b> Datos: <a href="https://www.wikidata.org/wiki/Q4583">Q4583</a> <span><b>&#183</b> Multimedia: <a href="https://commons.wikimedia.org/wiki/Category:Anne_Frank">Anne Frank</a> <span><b>&#183</b> Textos: <a href="https://es.wikisource.org/wiki/Autor:Ana_Frank">Autor:Ana Frank</a>
+                                <hr>
+                                <ul style="padding-left: 0px; margin-top: 0px; margin-bottom: 0px; line-height: 1.5">
+                                    <b >Identificadores</b>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://www.worldcat.org/identities/containsVIAFID/27064673"> WorldCat </a></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://es.wikipedia.org/wiki/Fichero_de_Autoridades_Virtual_Internacional"> VIAF:</a> <a href="https://viaf.org/viaf/27064673/">27064673 </a></a></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://es.wikipedia.org/wiki/International_Standard_Name_Identifier"> ISNI:</a> <a href="https://isni.oclc.org/xslt/DB=1.2/CMD?ACT=SRCH&IKT=8006&TRM=ISN%3A0000%200001%202125%201130">0000 0001 2125 1130 </a></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://es.wikipedia.org/wiki/Biblioteca_Nacional_de_la_Rep%C3%BAblica_Argentina"> BNA:</a> <a href="https://catalogo.bn.gov.ar/F/?func=direct&local_base=BNA10&doc_number=000036764">000036764 </a></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://es.wikipedia.org/wiki/Biblioteca_Nacional_de_Espa%C3%B1a"> BNE:</a> <a href="https://datos.bne.es/resource/XX879997">XX879997 </a></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://es.wikipedia.org/wiki/Biblioteca_Nacional_de_Francia"> BNF:</a> <a href="https://catalogue.bnf.fr/ark:/12148/cb11903452x">11903452x </a><a href="http://data.bnf.fr/ark:/12148/cb11903452x"> (data) </a></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://es.wikipedia.org/wiki/Biblioteca_Nacional_de_Chile"> BNC: </a><a href="http://www.bncatalogo.cl/F/?func=direct&local_base=red10&doc_number=000063278"> 000063278</a></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://es.wikipedia.org/wiki/Biblioteca_de_Catalu%C3%B1a"> CANTIC:</a> <a href="https://cantic.bnc.cat/registre/981058512799706706">981058512799706706</a></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://es.wikipedia.org/wiki/Gemeinsame_Normdatei"> GND:</a><a href="https://d-nb.info/gnd/118534734">118534734</a></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://es.wikipedia.org/wiki/Library_of_Congress_Control_Number"> LCCN:</a><a href="https://id.loc.gov/authorities/n79125789">n79125789</a></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://es.wikipedia.org/wiki/Biblioteca_Nacional_de_la_Dieta"> NDL:</a><a href="https://id.ndl.go.jp/auth/ndlna/00439999">00439999</a></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://es.wikipedia.org/wiki/Biblioteca_Nacional_de_la_Rep%C3%BAblica_Checa"> NKC:</a><a href="https://aleph.nkp.cz/F/?func=find-c&local_base=aut&ccl_term=ica=jn20000601616">jn20000601616</a></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://es.wikipedia.org/wiki/Biblioteca_Nacional_de_Australia"> NLA:</a><a href="https://librariesaustralia.nla.gov.au/search/display?dbid=auth&id=35099418">35099418</a></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://es.wikipedia.org/wiki/Biblioteca_del_Estado_Ruso"> BER:</a><a href="http://aleph.rsl.ru/F?func=find-b&find_code=SYS&adjacent=Y&local_base=RSL11&request=000063263&CON_LNG=ENG">000063263</a></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://es.wikipedia.org/wiki/CiNii"> CiNii:</a><a href="https://ci.nii.ac.jp/author/DA01507686">DA01507686</a></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://www.wikidata.org/wiki/Q29861311"> SNAC:</a><a href="https://snaccooperative.org/ark:/99166/w65c0rns">w65c0rns</a></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://es.wikipedia.org/wiki/Syst%C3%A8me_universitaire_de_documentation"> SUDOC:</a><a href="https://www.idref.fr/02687332X">02687332X</a></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://es.wikipedia.org/wiki/Union_List_of_Artist_Names"> ULAN:</a><a href="https://www.getty.edu/vow/ULANFullDisplay?find=&role=&nation=&subjectid=500240135">500240135</a></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://es.wikipedia.org/wiki/BIBSYS"> BIBSYS:</a><a href="https://authority.bibsys.no/authority/rest/authorities/html/90105825">90105825</a></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://es.wikipedia.org/wiki/Biografisch_Portaal"> BPN:</a><a href="http://www.biografischportaal.nl/persoon/05308737">05308737</a></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://es.wikipedia.org/wiki/Open_Library"> Open Library:</a><a href="https://openlibrary.org/works/OL446842A">OL446842A</a></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <b>Diccionarios y enciclopedias</b></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://es.wikipedia.org/wiki/Enciclopedia_Brit%C3%A1nica"></a><a href=""> Britannica:</a><a href="https://www.britannica.com/biography/Anne-Frank">url</a></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <b>Repositorios digitales</b></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://es.wikipedia.org/wiki/Europeana"> Europeana:</a><a href="https://data.europeana.eu/agent/base/66709">agent/base/66709</a></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <b>Cine</b></li>
+                                    <li class="item-aut"><span><b>&#183</b></span> <a href="https://es.wikipedia.org/wiki/Internet_Movie_Database"> IMDb:</a><a href="https://wikidata-externalid-url.toolforge.org/?p=345&url_prefix=https://www.imdb.com/&id=nm0290833">nm0290833</a></li>
+                                </ul>
+                            </td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
