Modify hr style

--- a/wikipedia-page/index.html
+++ b/wikipedia-page/index.html
@@ -785,10 +785,10 @@
 
                     <table id="autoridades">
                         <tr>
-                            <td id="head"><b><a href="https://es.wikipedia.org/wiki/Control_de_autoridades">Control de autoridades</a></b></td>
+                            <td id="head" style="font-size: 12px;"><b><a href="https://es.wikipedia.org/wiki/Control_de_autoridades">Control de autoridades</a></b></td>
                             <td style="padding-left: 4px;">
                                 <b>Proyectos Wikimedia</b> <span><b>&#183</b> Datos: <a href="https://www.wikidata.org/wiki/Q4583">Q4583</a> <span><b>&#183</b> Multimedia: <a href="https://commons.wikimedia.org/wiki/Category:Anne_Frank">Anne Frank</a> <span><b>&#183</b> Textos: <a href="https://es.wikisource.org/wiki/Autor:Ana_Frank">Autor:Ana Frank</a>
-                                <hr>
+                                <hr color="#aaa" size="0px">
                                 <ul style="padding-left: 0px; margin-top: 0px; margin-bottom: 0px; line-height: 1.5">
                                     <b >Identificadores</b>
                                     <li class="item-aut"><span><b>&#183</b></span> <a href="https://www.worldcat.org/identities/containsVIAFID/27064673"> WorldCat </a></li>
