--- a/wikipedia-page/index.html
+++ b/wikipedia-page/index.html
@@ -783,13 +783,13 @@
                         <li><a href="https://web.archive.org/web/20080124042808/http://www.ushmm.org/museum/exhibit/online/af/htmlsite/">Exposición "Unfinished Story" en el Museo Conmemorativo del Holocausto de Estados Unidos</a> <span style="color:#555;">(en inglés)</span></li>
                     </ul>
 
-                    <table id="autoridades">
+                    <table id="autoridades-table" style="margin-bottom: 15px;">
                         <tr>
                             <td id="head" style="font-size: 12px;"><b><a href="https://es.wikipedia.org/wiki/Control_de_autoridades">Control de autoridades</a></b></td>
                             <td style="padding-left: 4px;">
                                 <b>Proyectos Wikimedia</b> <span><b>&#183</b> Datos: <a href="https://www.wikidata.org/wiki/Q4583">Q4583</a> <span><b>&#183</b> Multimedia: <a href="https://commons.wikimedia.org/wiki/Category:Anne_Frank">Anne Frank</a> <span><b>&#183</b> Textos: <a href="https://es.wikisource.org/wiki/Autor:Ana_Frank">Autor:Ana Frank</a>
                                 <hr color="#aaa" size="0px">
-                                <ul style="padding-left: 0px; margin-top: 0px; margin-bottom: 0px; line-height: 1.5">
+                                <ul style="padding-left: 0px; margin-top: 0px; margin-bottom: 0px; line-height: 1.6">
                                     <b >Identificadores</b>
                                     <li class="item-aut"><span><b>&#183</b></span> <a href="https://www.worldcat.org/identities/containsVIAFID/27064673"> WorldCat </a></li>
                                     <li class="item-aut"><span><b>&#183</b></span> <a href="https://es.wikipedia.org/wiki/Fichero_de_Autoridades_Virtual_Internacional"> VIAF:</a> <a href="https://viaf.org/viaf/27064673/">27064673 </a></a></li>
@@ -822,7 +822,56 @@
                             </td>
                         </tr>
                     </table>
+
+                    <table id="categorias-table" style="margin-bottom: 22px;">
+                        <tr>
+                            <td>
+                                <ul style="font-size: 14px; padding-left: 0px; margin-top: 0px; margin-bottom: 0px; line-height: 1.6"> 
+                                    <a href="https://es.wikipedia.org/wiki/Especial:Categor%C3%ADas">Categorías:</a> 
+                                    <li class="item-cat"> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:Mujeres">Mujeres</a></li>
+                                    <li class="item-cat"><span class="separator">|</span> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:Nacidos_en_1929">Nacidos en 1929</a></li>
+                                    <li class="item-cat"><span class="separator">|</span> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:Fallecidos_en_1945">Fallecidos en 1945</a></li>
+                                    <li class="item-cat"><span class="separator">|</span> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:Ana_Frank">Ana Frank</a></li>
+                                    <li class="item-cat"><span class="separator">|</span> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:Emigrantes_alemanes_hacia_Pa%C3%ADses_Bajos">Emigrantes alemanes hacia Países Bajos</a></li>
+                                    <li class="item-cat"><span class="separator">|</span> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:Escritoras_de_los_Pa%C3%ADses_Bajos">Escritoras de los Países Bajos</a></li>
+                                    <li class="item-cat"><span class="separator">|</span> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:Escritoras_de_Alemania">Escritoras de Alemania</a></li>
+                                    <li class="item-cat"><span class="separator">|</span> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:Escritores_de_Alemania_del_siglo_XX">Escritores de Alemania del siglo XX</a></li>
+                                    <li class="item-cat"><span class="separator">|</span> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:Escritores_en_neerland%C3%A9s">Escritores en neerlandés</a></li>
+                                    <li class="item-cat"><span class="separator">|</span> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:Escritores_jud%C3%ADos">Escritores judíos</a></li>
+                                    <li class="item-cat"><span class="separator">|</span> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:Ap%C3%A1tridas">Apátridas</a></li>
+                                    <li class="item-cat"><span class="separator">|</span> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:V%C3%ADctimas_de_campos_de_concentraci%C3%B3n_nazis">Víctimas de campos de concentración nazis</a></li>
+                                    <li class="item-cat"><span class="separator">|</span> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:Diaristas_del_siglo_XX">Diaristas del siglo XX</a></li>
+                                    <li class="item-cat"><span class="separator">|</span> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:Escritores_de_literatura_infantil_de_los_Pa%C3%ADses_Bajos">Escritores de literatura infantil de los Países Bajos</a></li>
+                                    <li class="item-cat"><span class="separator">|</span> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:Escritores_de_literatura_infantil_de_Alemania">Escritores de literatura infantil de Alemania</a></li>
+                                    <li class="item-cat"><span class="separator">|</span> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:Jud%C3%ADos_de_Alemania">Judíos de Alemania</a></li>
+                                    <li class="item-cat"><span class="separator">|</span> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:Jud%C3%ADos_de_los_Pa%C3%ADses_Bajos">Judíos de los Países Bajos</a></li>
+                                    <li class="item-cat"><span class="separator">|</span> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:Mujeres_en_la_Segunda_Guerra_Mundial">Mujeres en la Segunda Guerra Mundial</a></li>
+                                    <li class="item-cat"><span class="separator">|</span> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:Ni%C3%B1os_fallecidos">Niños fallecidos</a></li>
+                                    <li class="item-cat"><span class="separator">|</span> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:V%C3%ADctimas_del_Holocausto">Víctimas del Holocausto</a></li>
+                                    <li class="item-cat"><span class="separator">|</span> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:Fallecidos_por_tifus">Fallecidos por tifus</a></li>
+                                    <li class="item-cat"><span class="separator">|</span> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:Autobi%C3%B3grafos_de_Alemania">Autobiógrafos de Alemania</a></li>
+                                    <li class="item-cat"><span class="separator">|</span> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:Alemanas_del_siglo_XX">Alemanas del siglo XX</a></li>
+                                    <li class="item-cat"><span class="separator">|</span> <a href="https://es.wikipedia.org/wiki/Categor%C3%ADa:Nacidos_en_Fr%C3%A1ncfort_del_Meno">Nacidos en Fráncfort del Meno</a></li>
+                                </ul>
+                            </td>
+                        </tr>
+                    </table>
                 </div>
+            </div>
+            <div id="footer">
+                <p>Esta página se editó por última vez el 26 ene 2022 a las 12:26.</p>
+                <p>El texto está disponible bajo la Licencia Creative Commons Atribución Compartir Igual 3.0; pueden aplicarse cláusulas adicionales. Al usar este sitio, usted acepta nuestros términos de uso y nuestra política de privacidad.
+                <br>Wikipedia® es una marca registrada de la Fundación Wikimedia, Inc., una organización sin ánimo de lucro.</p>
+                
+                <ul style="font-size: 13px; padding-left: 0px;">
+                    <li class="item-footer"><a href="https://meta.wikimedia.org/wiki/Privacy_policy/es">Política de privacidad</a></li>
+                    <li class="item-footer item-foot-padd"><a href="https://es.wikipedia.org/wiki/Wikipedia:Acerca_de">Acerca de Wikipedia</a></li>
+                    <li class="item-footer item-foot-padd"><a href="https://es.wikipedia.org/wiki/Wikipedia:Limitaci%C3%B3n_general_de_responsabilidad">Limitación de responsabilidad</a></li>
+                    <li class="item-footer item-foot-padd"><a href="https://es.m.wikipedia.org/w/index.php?title=Ana_Frank&mobileaction=toggle_view_mobile">Versión para móviles</a></li>
+                    <li class="item-footer item-foot-padd"><a href="https://www.mediawiki.org/wiki/Special:MyLanguage/How_to_contribute">Desarrolladores</a></li>
+                    <li class="item-footer item-foot-padd"><a href="https://stats.wikimedia.org/#/es.wikipedia.org">Estadísticas</a></li>
+                    <li class="item-footer item-foot-padd"><a href="https://foundation.wikimedia.org/wiki/Cookie_statement/es">Declaración de cookies</a></li>
+                </ul>
             </div>
         </div>
     </div>
