Update button style

--- a/index.html
+++ b/index.html
@@ -8,14 +8,10 @@
   <title>Freecodecamp Projects</title>
 </head>
 <body>
-  <h1 id="title">Freecodecamp Projects</h1>
-  <div class="opciones">
-    <div class="button">
-      <h2><a href="./tribute-page/index.html">Tribute Page</a></h2>
-    </div>
-    <div class="button">
-      <h2><a href="./wikipedia-page/index.html">Wikipedia Page</a></h2>
-    </div>
+  <div class="container">
+    <h1 id="title">Freecodecamp Projects</h1>
+    <a href="./tribute-page/index.html" class="btn">Tribute Page</a>
+    <a href="./wikipedia-page/index.html" class="btn">Wikipedia Page</a>
   </div>
 </body>
 </html>
