--- a/wikipedia-page/index.html
+++ b/wikipedia-page/index.html
@@ -862,7 +862,11 @@
                 <p>Esta página se editó por última vez el 26 ene 2022 a las 12:26.</p>
                 <p>El texto está disponible bajo la Licencia Creative Commons Atribución Compartir Igual 3.0; pueden aplicarse cláusulas adicionales. Al usar este sitio, usted acepta nuestros términos de uso y nuestra política de privacidad.
                 <br>Wikipedia® es una marca registrada de la Fundación Wikimedia, Inc., una organización sin ánimo de lucro.</p>
-                
+                <div id="logos">
+                    <a href="https://wikimediafoundation.org/"><img src="img/wikimedia-button.png"></a>
+                    <a href="https://www.mediawiki.org/"><img src="img/poweredby_mediawiki_88x31.png"></a>
+                </div>
+
                 <ul style="font-size: 13px; padding-left: 0px;">
                     <li class="item-footer"><a href="https://meta.wikimedia.org/wiki/Privacy_policy/es">Política de privacidad</a></li>
                     <li class="item-footer item-foot-padd"><a href="https://es.wikipedia.org/wiki/Wikipedia:Acerca_de">Acerca de Wikipedia</a></li>
